THRIFT-4617: Prepend service-specific struct names with service name (#1578)

Client: rs